# aurarouter-win-x64

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/aurarouter_win_x64/: __init__.py  diagnostics.py  logging.py  metadata.py
