[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurarouter-win-x64"
version = "0.5.8189"
authors = [{ name = "Steven Siebert", email = "info@auracoredynamics.com" }]
description = "Windows CPU backend for AuraRouter"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aurarouter_win_x64 = ["bin/**/*"]
